<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:id="@+id/activity_main">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_kata"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/inputText"
            android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="start"
            tools:ignore="NestedWeights">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_toast"
                android:id="@+id/helloToast"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_toast"
                android:id="@+id/customToast"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_toast"
                android:id="@+id/updateToast"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canceled_toast"
                android:id="@+id/canceledToast"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library_toast"
                android:id="@+id/libraryToast"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_snack"
                android:id="@+id/helloSnack"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_snack"
                android:id="@+id/customSnack"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_snack"
                android:id="@+id/updateSnack"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_snack"
                android:id="@+id/actionSnack"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library_snack"
                android:id="@+id/librarySnack"
                android:theme="@style/Widget.AppCompat.Button.Colored" />

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabButton"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_play_arrow_blue_grey_500_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        tools:ignore="VectorDrawableCompat" />

</android.support.design.widget.CoordinatorLayout>